3/3/2021 Subida desde el otro PC Pantalla del mapa de google para mostrar los mapas. Mejoras generales en las pantallas de mapas. Listado de mapas separado por líneas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_new_map">Nuevo Mapa</string>
 
     <string name="fabText">Guardar</string>
+    <string name="title_activity_g_maps">Map</string>
 </resources>
